Hopefully fixed incorrect positioning of hamburger menu black on browsers without scrollbars

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -173,7 +173,7 @@ header .hamburger {
 		position: fixed;
 		top: 0px;
 		left: 0px;
-		width: calc(100vw - 257px);
+		width: calc(100% - 240px);
 		height: 100vh;
 		background: black;
 		opacity: 0;
@@ -182,7 +182,7 @@ header .hamburger {
 
 	#navMenuBlack.visible {
 		visibility: visible;
-		opacity: 0.4;
+		opacity: 0.5;
 		transition: opacity 0.25s 0.15s, visibility 0s;
 	}
 }
